# Surrealism

./: .gitignore  Cargo.toml  README.md
surrealism/: .gitignore  Cargo.toml  README.md  Surrealism.xmind
surrealism/README/: CreateWrapper.md  DefineWrapper.md  DeleteWrapper.md  InsertWrapper.md  OtherCore.md  RelateWrapper.md  SurrealismHome.md  UpdateWrapper.md  UseWrapper.md  WrapperIllustration.md
surrealism/doc/: help.html
surrealism/doc/src/surrealism/config/: constants.rs.html
surrealism/doc/src/surrealism/sql/: parser.rs.html
surrealism/doc/src/surrealism/utils/: mod.rs.html
surrealism/doc/static.files/: rustdoc-93196c7a1c3542a8.css
surrealism/doc/surrealism/: enum.FieldType.html  enum.Schema.html  enum.TableId.html  struct.Criteria.html  struct.DefineWrapper.html  struct.Field.html  struct.InfoWrapper.html  struct.OrderCondition.html  struct.RelateWrapper.html  struct.SelectWrapper.html  struct.Transaction.html  struct.UpdateWrapper.html  struct.UseWrapper.html  trait.Wrapper.html  type.SurrealRes.html
surrealism/doc/surrealism/utils/: fn.handle_str.html
surrealism/src/: info.rs  lib.rs
surrealism/src/config/: mod.rs
surrealism/src/config/core/: mod.rs  surreal_config.rs
surrealism/src/config/core/conf/: default_config_service_impl.rs
surrealism/src/config/core/init/: default_init_service_impl.rs
surrealism/src/config/core/traits/: config_trait.rs
surrealism/src/core/builder/: create.rs  define.rs  delete.rs  info.rs  insert.rs  macros.rs  mod.rs  relate.rs  remove.rs  s_use.rs  select.rs  show.rs  transaction.rs  update.rs
surrealism/src/core/builder/define/: analyzer.rs  db.rs  event.rs  field.rs  function.rs  index.rs  mod.rs  ns.rs  param.rs  scope.rs  table.rs  token.rs  user.rs
surrealism/src/core/config/: configuration.rs
surrealism/src/core/config/init/: mod.rs
surrealism/src/core/db/: condition.rs  constants.rs  content.rs  field.rs  geo.rs  id.rs  mod.rs  order.rs  patch.rs  set.rs  sql.rs  strategy.rs  value.rs  with.rs
surrealism/src/core/db/functions/: crypto.rs  mod.rs
surrealism/src/core/row/: mod.rs
surrealism/src/core/surreal/: connector.rs  mod.rs
surrealism/src/core/surreal/config/: configuration.rs  logger.rs  mod.rs
surrealism/src/creator/: mod.rs
surrealism/src/creator/entities/: define_wrapper.rs  info_wrapper.rs  insert_wrapper.rs  mod.rs  relate_wrapper.rs  remove_wrapper.rs  select_wrapper.rs  transaction.rs  update_wrapper.rs  use_wrapper.rs
surrealism/src/error/: config_parse.rs  msg.rs
surrealism/src/sql/: mod.rs
surrealism/src/utils/: mod.rs
surrealism/tests/: Cargo.toml  banner.txt
surrealism/tests/src/: main.rs  sum.rs
surrealism/tests/src/example/connect/: connect.rs
surrealism_all/surrealism/: Cargo.toml
surrealism_all/surrealism/src/: error.rs  info.rs  lib.rs  util.rs
surrealism_all/surrealism/src/core/: connector.rs  constant.rs  mod.rs
surrealism_all/surrealism/src/error/: config.rs  config_parse.rs  mod.rs
tests/: Cargo.toml  Surrealism.json  Surrealism.toml
tests/src/: main.rs  sum.rs
tests/src/example/: connect.rs  create_wrapper_content.rs  create_wrapper_set.rs  delete_wrapper.rs  insert_wrapper_map.rs  select_wrapper_easy.rs  use_wrapper.rs
tests/src/example/create/: create_wrapper_content.rs  create_wrapper_set.rs
tests/src/example/define/: define_wrapper_database.rs  define_wrapper_event.rs  define_wrapper_field.rs  define_wrapper_function.rs  define_wrapper_index.rs  define_wrapper_login_db.rs  define_wrapper_login_ns.rs  define_wrapper_namespace.rs  define_wrapper_param.rs  define_wrapper_scope.rs  define_wrapper_scope_bind.rs  define_wrapper_table.rs  define_wrapper_token_db.rs  define_wrapper_token_ns.rs
tests/src/example/delete/: delete_wrapper.rs  delete_wrapper_easy.rs
tests/src/example/info/: info_wrapper.rs  info_wrapper_db.rs  info_wrapper_kv.rs  info_wrapper_ns.rs  info_wrapper_scope.rs  info_wrapper_table.rs
tests/src/example/insert/: insert_wrapper_easy.rs  insert_wrapper_many.rs  insert_wrapper_map.rs
tests/src/example/relate/: relate_wrapper.rs
tests/src/example/select/: select_wrapper.rs  select_wrapper_easy.rs
tests/src/example/transaction/: transaction.rs
tests/src/example/update/: update_wrapper_content.rs  update_wrapper_if.rs  update_wrapper_merge.rs  update_wrapper_more.rs  update_wrapper_set.rs
tests/src/example/use/: use_wrapper.rs
tests/src/examples/: quickstart.rs  use_ns_db.rs
tests/src/examples/define/: define_wrapper.rs
tests/src/examples/functions/: count.rs
tests/src/examples/geo/: geo.rs
tests/src/examples/ignore/: test_match_id_type.rs
tests/src/examples/info/: info_wrapper.rs
tests/src/examples/insert/: insert_wrapper.rs
tests/src/examples/overdue/: easy_commit.rs
tests/src/examples/remove/: remove_wrapper.rs
tests/src/examples/row/: row_sql.rs  row_sql_macro.rs
tests/src/examples/select/: live_select.rs  select_wrapper.rs
tests/src/examples/tools/: surreal_condition.rs  surreal_value.rs
tests/src/examples/transaction/: transaction.rs
tests/src/examples/update/: update_wrapper.rs
tests/src/examples/v0.3+/builder/: info.rs  (+12 more)
(+293 files in other folders)
