[package]
name = "surrealism"
version = "0.3.0"
edition = "2021"
description = "Rust's extension of SurrealDB's official library aims to facilitate and unify various operations"
authors = ["syf20020816@outlook.com"]
license = "MIT"
repository = "https://github.com/Surrealism-All/Surrealism"
documentation = "https://github.com/Surrealism-All/Surrealism/wiki"
keywords = ["surrealism", "surrealdb","sqlbuilder","sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["builder"]
row = []
builder = []
surreal = ["builder"]
full = ["row", "builder", "surreal"]


[dependencies]
figment = { version = "0.10.10", features = ["toml", "env", "json"] }
serde = "1.0.173"
serde_json = "1.0.103"
surrealdb = "1.0.0"
log = "0.4.17"
simple_logger = "4.2.0"
futures = "0.3.28"
async-trait = "0.1.72"
regex = "1.9.1"
except-plugin = { version = "0.0.1", features = ["macros"] }
num-traits = "0.2.17"



