[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealism="0.1.0"
figment = { version = "0.10.8", features = ["toml", "env"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
surrealdb = "1.0.0-beta.9"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
